<resources>
    <string name="app_name">Todoapp</string>
    <string name="search_note">Search Note</string>
    <string name="add_new_note">add new note</string>
    <string name="delete_note">Delete Note</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="save">save</string>
    <string name="note">Note</string>
    <string name="cancel">cancle</string>
</resources>