<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:background="@android:color/transparent"
            app:tint="@color/red"
            android:clickable="true"
            style="@style/ImageButton_style"
            android:id="@+id/add_note_back"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_gravity="start"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/cancel"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/note" />

        <ImageButton
            android:background="@android:color/transparent"
            app:tint="@color/green"
            android:id="@+id/add_note_check"
            style="@style/ImageButton_style"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_gravity="end"
            android:layout_marginEnd="21dp"
            android:src="@drawable/baseline_check_24"
            android:contentDescription="@string/save" />

    </com.google.android.material.appbar.MaterialToolbar>

    <EditText
        android:id="@+id/et_note_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:autofillHints="title"
        android:hint="@string/enter_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <EditText
        android:id="@+id/et_note_body"
        android:gravity="top"
        android:hint="@string/enter_your_note"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_note_title"
        app:layout_constraintVertical_bias="0.065"
        android:autofillHints="Note . . ."
        android:inputType="text" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--@+id/add_note_back @+id/add_note_check @+id/et_note_title   @+id/et_note_body-->